samples/_failures_safe/1761341081_b26cc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b665437.c: In function ‘main’:
./samples/SAFE/__tmp_9b665437.c:148:5: error: expected declaration or statement at end of input
  148 |     if (!is_valid_input(input)) {
      |     ^~
./samples/SAFE/__tmp_9b665437.c:148:5: error: expected declaration or statement at end of input
